# DemoDax

./: .gitignore  build.gradle  gradle.properties
DemoAlarm/: build.gradle
DemoAndroid/: build.gradle
DemoAndroidLib/: build.gradle
DemoCache/: build.gradle
DemoCircleView/: build.gradle
DemoConstrainLayout/: build.gradle
DemoFingerPrint/: build.gradle
DemoGesture/: build.gradle
DemoGradle/: android_gradle_tasks.txt  build.gradle  gradle.properties  keystore_debug.jks  keystore_release.jks  keystore_release_info.properties
DemoGreeDao/: build.gradle
DemoImageCompress/: build.gradle
DemoIplay/: build.gradle
DemoJNI/: CMakeLists.txt  build.gradle
DemoJava/: build.gradle
DemoKotlin/: build.gradle
DemoLargeImage/: build.gradle
DemoLongScreenshot/: build.gradle
DemoMessagePack/: build.gradle
DemoMultiLayerDrawerLayout/: build.gradle
DemoNagivatorSlowTest/: build.gradle
DemoNestedScroll/: build.gradle
DemoOkHttp/: build.gradle
DemoQuickReturnListView/: build.gradle
DemoSecurity/: CMakeLists.txt  build.gradle  proguard-rules.pro
DemoSecurity/src/androidTest/java/com/dax/demo/security/: ExampleInstrumentedTest.java
DemoSecurity/src/main/: AndroidManifest.xml
DemoSecurity/src/main/cpp/: Security.cpp
DemoSecurity/src/main/cpp/include/: Security.h
DemoSecurity/src/main/java/com/dax/demo/security/: Jni.java  MD5Util.java  MainActivity.java
DemoSecurity/src/main/res/layout/: activity_main.xml
DemoSecurity/src/main/res/values/: strings.xml
DemoSecurity/src/test/java/com/dax/demo/security/: ExampleUnitTest.java
(+462 files in other folders)
