# Sets the minimum version of CMake required to build your native library.
# This ensures that a certain set of CMake features is available to
# your build.

cmake_minimum_required(VERSION 3.4.1)

add_library( # Specifies the name of the library.
             security

             # Sets the library as a shared library.
             SHARED

             # Provides a relative path to your source file(s).
             src/main/cpp/Security.cpp src/main/cpp/md5.cpp)
include_directories(src/main/cpp/include/)